# agent_with_langchain_ui

./: README.md  실행명령어.txt
backend/: DEL_server.py  Dockerfile  docker-compose.yml  langgraph.json  pyproject.toml  requirements.txt  server.py  structure.txt
backend/.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.1.pckl.tmp  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.2.pckl.tmp  .langgraph_checkpoint.3.pckl  .langgraph_checkpoint.3.pckl.tmp  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
backend/agent_code/: agent.py
backend/src/: agent.py
